k8s-rpi-apps-ingresses/hass-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hass-ingress
  namespace: home-assistant
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`<hasshostname>.<domainname>`)
    kind: Rule
    services:
    - name: home-assistant
      port: 8123
  tls:
    certResolver: godaddy
