k8s-rpi-apps-ingresses/hubble-ui.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<hubblehostname>.<domainname>`)
    kind: Rule
    services:
    - name: hubble-ui
      port: 80
    middlewares:
      - name: basic-auth
        namespace: traefik-v2
