k8s-rpi-apps-ingresses/jellyfin-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin  
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<jellyfinhostname>.<domainname>`)
    kind: Rule
    services:
    - name: jellyfin
      port: 8096
