k8s-rpi-apps-ingresses/pihole-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-rpi-pihole-ui
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<piholehostname>.<domainname>`)
    kind: Rule
    services:
    - name: pihole-web
      port: 80
  tls:
    certResolver: godaddy
