k8s-rpi-apps-ingresses/transmission-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-ui
  namespace: jellyfin  
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<truihostname>`)
    kind: Rule
    services:
    - name: k8s-rpi-transmission
      port: 9091
