k8s-rpi-apps-ingresses/trilium-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: trilium-ingress
  namespace: trilium
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`<triliumhostname>`)
    kind: Rule
    services:
    - name: trilium
      port: 8080
